# dropshot-bot

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
.ebextensions/: options.config
ai/: app.py  connection_test.py  db.py  frontend.py  graph.py  populate_embeddings.py  prompts.py  sqltool.py  state.py  test.py  teste.py  tools.py  vendor_agent.py
database/: check_data.py  rds_population.py
tiny/: _base.py  main.py  mapping.py  models.py  mongo_processing.py  teste.py  utils.py
tiny/description_scrapper/: cleaned_with_estoque.csv  no_estoque.csv  products_extraction.ipynb  teste.py  with_estoque.csv
